--- a/search.html
+++ b/search.html
@@ -23,7 +23,7 @@
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
     <!--JS files-->
-    <script src="data/books.js"></script>
+    <!--script src="data/books.js"></script-->
     <script src="js/search.js"></script>
 </head>
 
@@ -65,7 +65,7 @@
         <!-- Search Bar -->
         <div class="collapse navbar-collapse">
             <form class="form-inline my-2 my-lg-0" id="searchbox">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" id="searchBar" name="searchbox">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" id="searchBar">
                 <button class="btn btn-success my-2 my-sm-0" type="submit" id="search"
                     onclick="search(event)">search</button>
             </form>
