Connect database from landing page

--- a/item.html
+++ b/item.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <!--JS files-->
   <script src="js/item.js"></script>
+  <script src="js/common.js"></script>
   <!--CSS File-->
   <link rel="stylesheet" href="./css/item.css">
 </head>
