--- a/search.html
+++ b/search.html
@@ -25,6 +25,7 @@
     <!--JS files-->
     <!--script src="data/books.js"></script-->
     <script src="js/search.js"></script>
+    <script src="js/common.js"></script>
 </head>
 
 <body>
