--- a/Honbookstore.html
+++ b/Honbookstore.html
@@ -22,6 +22,7 @@
   <!--JS files-->
   <script src="data/books.js"></script>
   <script src="js/landing.js"></script>
+  <script src="js/common.js"></script>
   <!--CSS file-->
   <link rel="stylesheet" href="./css/landing.css">
 </head>
