--- a/Honbookstore.html
+++ b/Honbookstore.html
@@ -65,7 +65,7 @@
     <div class="collapse navbar-collapse">
       <form class="form-inline my-2 my-lg-0" id="searchbox">
         <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" id="searchBar">
-        <button class="btn btn-success my-2 my-sm-0" type="submit" id="search" onclick="search(event)">search</button>
+        <button class="btn btn-success my-2 my-sm-0" type="submit" id="search" onclick="searchFunc(event)">search</button>
       </form>
 
       <ul class="navbar-nav" id="navright">
