--- a/search.html
+++ b/search.html
@@ -68,7 +68,7 @@
             <form class="form-inline my-2 my-lg-0" id="searchbox">
                 <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" id="searchBar">
                 <button class="btn btn-success my-2 my-sm-0" type="submit" id="search"
-                    onclick="search(event)">search</button>
+                    onclick="searchFunc(event)">search</button>
             </form>
 
             <ul class="navbar-nav" id="navright">
